modify directory structure

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reinvented Color Wheel - A vanilla-js color picker inspired by Farbtastic</title>
-    <link rel="stylesheet" href="../reinvented-color-wheel.css">
+    <link rel="stylesheet" href="reinvented-color-wheel.css">
   </head>
   <body>
     <input id="color">
-    <script src="../reinvented-color-wheel.min.js"></script>
+    <script src="reinvented-color-wheel.min.js"></script>
     <script>
       new ReinventedColorWheel({
         parentElement: document.body,
