--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reinvented Color Wheel - A vanilla-js color picker inspired by Farbtastic</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400">
     <link rel="stylesheet" href="reinvented-color-wheel.css">
+    <style>
+      #selected {
+        font-family: 'Roboto Mono', monospace;
+        font-size: inherit;
+        outline: none;
+        border: none;
+        border-radius: 4px;
+        margin-top: 1em;
+        padding: .5em 1em;
+        text-align: center;
+        color: white;
+        text-shadow: 1px 1px 1px black;
+      }
+    </style>
   </head>
   <body>
     <div style="display: flex; flex-direction: column; align-items: center;">
       <div id="container"></div>
-      <input id="selected" spellcheck="false" size="27" style="border: none; border-radius: 4px; margin-top: 1em; padding: .5em 1em; text-align: center; font-family: monospace; color: white; text-shadow: 1px 1px 1px black;">
+      <input id="selected" spellcheck="false" size="27" readonly>
     </div>
     <script src="reinvented-color-wheel.min.js"></script>
     <script>
